Added a bunch of things. Cursor does not yet move, so odd behaviour